--- a/source/post/2020/2008.md
+++ b/source/post/2020/2008.md
@@ -54,6 +54,22 @@ Read:
 + 使用gossip协议同步PGMRPL
 + 使用VDL来同步Read View
 
+容灾:
+
+1. 新增一个副本（比如ABCDEF中F故障，新增副本G。把然后把副本分为两组，ABCDEF和ABCDEG）
+2. 在同步和迁移过程中，对写操作，要求所有副本组都满足 4/6 确认。（即ABCDEF和ABCDEG中都必须至少有4个确认）
+3. 在同步和迁移过程中，对读操作，要求任一副本组满足 3/6 确认。（即ABCDEF和ABCDEG中只要一组有3个确认即可）
+4. 等迁移完毕，移除副本F
+
+流程如下:
+
+![2008-failure.png](2008-failure.png)
+
+如果在这过程中又有节点失败，则同时要满足以上规则里两个副本迁移的条件。比如在上述流程中E节点又故障了。
+
+1. 新增副本H；
+2. 在同步和迁移过程中，对于写操作，需要ABCDEF和ABCDEG中副本都满足 4/6 确认，且ABCDFH和ABCDGH中副本都满足 4/6 确认。
+
 其他:
 
 + 事务处理Fork的社区版MySQL的InnoDB，替换了WAL的读写部分。
@@ -63,6 +79,14 @@ Read:
 + 个人理解读和镜像隔离性依赖InnoDB内的B+树+共享的redo log
 + 整体设计特别适合 [LSM Tree][5]
 + GC策略: 可以安全回收PGMRPL(per-PG Minimum Read Point LSN)之前的Log
++ 写放大优化(Full Segments/Tail Segments)。八6倍放大优化到3倍。
+  + Redo Log数据相对较小（因为PGMRPL之前的部分是可以直接回收的，这个窗口很小）。全量数据比较大。
+  + 把副本分为Full Segments和Tail Segments，3个Full Segments副本和3个Tail Segments副本
+    > Full Segments中包含全量数据和Redo Log，Tail Segments只包含Redo Log
+  + 写确认改为4/6副本或3/3 Full Segments副本确认
+  + 读确认改为3/6副本确认或1/3 Full Segments副本确认
+  + 容灾和故障切换中Full Segments副本需要先从其他Full Segments副本同步快照，然后从其他Tail Segments副本中同步Redo Log。
+    > 针对: 写操作中 1/3 Full Segments副本和 3/3 Tail Segments副本确认的情况
 
 性能:
 
