--- a/source/post/2020/2009.md
+++ b/source/post/2020/2009.md
@@ -17,4 +17,7 @@ release
 
 set_allocated_XXX
 
+
+unsafe_arena_set_allocated_XXX/unsafe_arena_release_XXX 判断Arena在外层，资源维护在内层
+
 [1]: https://github.com/protocolbuffers/protobuf
