--- a/source/post/2020/2009.md
+++ b/source/post/2020/2009.md
@@ -9,9 +9,35 @@ id: 2009
 tags: 
   - protobuf
   - arena
-title: 一个使用protobuf中C++接口的Arena的坑
+title: 几个使用protobuf中C++接口的Arena的坑
 type: post
 ---
+
+## 前言
+
+[protobuf][1] 从3.0版本开始对C++增加了Arena接口，可以用于使用连续的内存块分配内部对象，并且可以更容易精确地控制对象地生命周期，最终达到减少内存碎片地目的。最近我给我们项目的部分接口流程进行相关地改造，在大多数使用 [protobuf][1] 的地方都增加了对Arena地支持，但是在接入过程中也碰到了一些问题和坑。
+
+> 以下实例代码使用 [protobuf][1] 3.13.0 版本。在 [protobuf][1] 3.14.0 版本之前，要开启C++ Arena接口要在proto的文件级选项里加上 ```option cc_enable_arenas = true;``` 。
+
+## Arena实现地基本原理
+
+Arena的原理十分简单，就是预先分配一个内存块。创建Message和内部对象的时候全部在分配好的内存块上 [placement new][2] 出来，所有的Message对象也会内部记录所属的Arena以便创建字对象和某些情况下需要检查Arena时使用。如果创建的对象不支持Arena的，在 [placement new][2] 完成后要在Arena上设置一个析构回调，以便在释放的时候调用析构流程。如果Arena内部的内存块剩余内存不足则会自动创建下一个(可能是更大的)内存块。
+
+Arena可以在创建Arena的时候通过指定自定义的ArenaOptions来设置一些系数，包括最大内存块大小（如果超出了会直接用）、初始内存块大小、分配/回收内存块的实现、事件接口等。
+
+每次Arena内存块剩余内存不足时，会尝试分配 ***最后一个内存块size\*2*** 和 ***ArenaOptions设置里的最大内存块*** 中的最小值（即: ```min(2 * last_block.size, ArenaOptions.max_block_size)``` ）。如果要分配的内存大小本身就是大于 ***ArenaOptions设置里的最大内存块*** 的，则会直接分配需要的内存块的大小+Header的大小（当前版本Header的大小是三个指针长度对齐到8，64位系统下就是24字节）。
+
+## 对长期存在对象的生命周期
+
+Arena有一个特点是它维护的所有对象都是在Arena析构的时候统一释放的。这中间它内部维护的内存块只会不断地append，并不会删除。所以这也决定了由Arena维护的对象要么只能是临时对象，要么是不可变的。否则它的内存会无限增长下去。比如，我们是有状态服务器，如果我们把一个用户的数据块长期缓存在内存里，然后Arena和用户对象的生命绑定。那么中间很多操作会不断地变更内部的对象结构，这就会导致用户下线前Arena无限增长。
+
+所以，我们主要对Arena的集成最终集中在各个Task的入口处，然后一个Task里的子Task和RPC请求中需要创建的局部变量数据都复用这个Arena。当一个Task及其子Task全部结束以后，Arena就释放了。而除非少量的一些对全服数据操作的Task以外，大多数Task生命周期也就几秒中，内存的回收时间就相对可控。
+
+## 初始化分配的大小和最大分配的大小
+
+在 ***ArenaOptions设置*** 里，默认的初始分配大小是 256B ，最大分配大小是 8KB 。前面也提到，我们的集成主要在各个Task的入口处，在Task里光是链路跟踪和RPC header相关的数据就占了100-200字节，而实际使用中一个Task的请求包、应答包就2倍曹处256B了。所以我们把初始值提升到了512B。同时我们项目中战斗记录的包都偏大，然后一些玩家数据拉取的包体也比较大，所以最大值也提高到了64KB。当然这些值后面有待观察，我们后面出了更详细的统计之后可能也再会调整。
+
+## ```set_allocated_XXX/release_XXX``` 和内存泄漏
 
 release
 
@@ -20,4 +46,96 @@ set_allocated_XXX
 
 unsafe_arena_set_allocated_XXX/unsafe_arena_release_XXX 判断Arena在外层，资源维护在内层
 
+## Swap退化成Copy
+
+```cpp
+// .pb.h
+inline void Swap(ConstSettingsType* other) {
+  if (other == this) return;
+  if (GetArena() == other->GetArena()) {
+    InternalSwap(other);
+  } else {
+    ::PROTOBUF_NAMESPACE_ID::internal::GenericSwap(this, other);
+  }
+}
+// .pb.cpp
+void ConstSettingsType::InternalSwap(ConstSettingsType* other) {
+  using std::swap;
+  _internal_metadata_.Swap<::PROTOBUF_NAMESPACE_ID::UnknownFieldSet>(&other->_internal_metadata_);                        // 内部数据swap
+  rpc_version_.Swap(&other->rpc_version_, &::PROTOBUF_NAMESPACE_ID::internal::GetEmptyStringAlreadyInited(), GetArena()); // 字段的swap
+}
+
+// reflection_ops.cc , MessageLite的版本和这个差不多，就不列举了
+void GenericSwap(Message* m1, Message* m2) {
+  Arena* m2_arena = m2->GetArena();
+  GOOGLE_DCHECK(m1->GetArena() != m2_arena);
+
+  // Copy semantics in this case. We try to improve efficiency by placing the
+  // temporary on |m2|'s arena so that messages are copied twice rather than
+  // three times.
+  Message* tmp = m2->New(m2_arena);
+  std::unique_ptr<Message> tmp_deleter(m2_arena == nullptr ? tmp : nullptr);
+  tmp->CheckTypeAndMergeFrom(*m1);
+  m1->Clear();
+  m1->CheckTypeAndMergeFrom(*m2);
+  m2->GetReflection()->Swap(tmp, m2);
+}
+```
+
+```cpp
+template <class TMsg>
+inline void protobuf_copy_message(TMsg &dst, const TMsg &src) {
+    dst.CopyFrom(src);
+}
+
+template <class TField>
+inline void protobuf_copy_message(::google::protobuf::RepeatedField<TField> &dst, const ::google::protobuf::RepeatedField<TField> &src) {
+    dst.Reserve(src.size());
+    dst.CopyFrom(src);
+}
+
+template <class TField>
+inline void protobuf_copy_message(::google::protobuf::RepeatedPtrField<TField> &dst, const ::google::protobuf::RepeatedPtrField<TField> &src) {
+    dst.Reserve(src.size());
+    dst.CopyFrom(src);
+}
+```
+
+```cpp
+template <class TMsg>
+inline void protobuf_move_message(TMsg &dst, TMsg &&src) {
+    if (dst.GetArena() == src.GetArena()) {
+        dst.Swap(&src);
+    } else {
+        protobuf_copy_message(dst, src);
+    }
+    
+    src.Clear();
+}
+
+template <class TField>
+inline void protobuf_move_message(::google::protobuf::RepeatedField<TField> &dst, ::google::protobuf::RepeatedField<TField> &&src) {
+    if (dst.GetArena() == src.GetArena()) {
+        dst.Swap(&src);
+    } else {
+        protobuf_copy_message(dst, src);
+    }
+    
+    src.Clear();
+}
+
+template <class TField>
+inline void protobuf_move_message(::google::protobuf::RepeatedPtrField<TField> &dst, ::google::protobuf::RepeatedPtrField<TField> &&src) {
+    if (dst.GetArena() == src.GetArena()) {
+        dst.Swap(&src);
+    } else {
+        protobuf_copy_message(dst, src);
+    }
+    
+    src.Clear();
+}
+```
+
 [1]: https://github.com/protocolbuffers/protobuf
+[2]: https://en.cppreference.com/w/cpp/language/new
+[3]: https://en.cppreference.com/w/cpp/named_req/TriviallyCopyable
