修复一处错别字

--- a/source/post/2020/2008.md
+++ b/source/post/2020/2008.md
@@ -30,7 +30,7 @@ type: post
 
 为了应对地理性的灾害（比如某地地震、火山等），并且在发生灾害时如果同时在进行容灾、扩缩容等操作时，集群仍然可用。[Amazon Aurora][10] 从副本的分布上，分为3组6个副本。3组对应了3个Amazon Zone(AZ)，可以部署在3个不同的地点，每个AZ两个副本。对于读请求需要保证6个中的3个节点确认才能请求成功，对于写请求需要6个节点中的4个确认才能认为执行成功。在发生扩缩容或者升级或者故障转移的时候，会一个副本一个副本地取迁移。如果这时候某个AZ整体故障了，至少读请求还都能被响应。
 
-因为 [Amazon Aurora][10] 仅改写了存储层，事务处理层并没有变，仍然是按InnoDB的MTR（mini transaction）的流程。有一个稍微不同的变化是 [Amazon Aurora][10] 的WAL是按PG(Protection  Groups)分组的，那么执行的MTR也会按涉及的数据所属的PG的分组来批处理。所以 [Amazon Aurora][10] 的隔离性和InnoDB一样，使用了Read View实现了MVCC(MultiVersion Concurrency Control)。在执行一个事务的过程中，[Amazon Aurora][10] 还是区分写节点和副本节点的，也仅有些节点会执行UNDO操作。
+因为 [Amazon Aurora][10] 仅改写了存储层，事务处理层并没有变，仍然是按InnoDB的MTR（mini transaction）的流程。有一个稍微不同的变化是 [Amazon Aurora][10] 的WAL是按PG(Protection  Groups)分组的，那么执行的MTR也会按涉及的数据所属的PG的分组来批处理。所以 [Amazon Aurora][10] 的隔离性和InnoDB一样，使用了Read View实现了MVCC(MultiVersion Concurrency Control)。在执行一个事务的过程中，[Amazon Aurora][10] 还是区分写节点和副本节点的，也仅有写节点会执行UNDO操作。
 
 ## 存储层细节
 
