draft for 2010.md

--- a/source/post/2020/2010.md
+++ b/source/post/2020/2010.md
@@ -18,9 +18,24 @@ python 接口
   插件加载
   Native接口和python实现
 
+动态输出路径
+选取规则
+函数名和类名规则
+合并解析
+
 libprotoc
+
+  部分接口只对内暴露，比如查询关键字、类目和字段名转换
 
 plugin.proto
 
+
+|     比较项     |         基于脚本的动态模板引擎         |   基于 ```libprotoc```   | 接入 ```plugin.proto``` 协议 |
+|----------------|----------------------------------------|--------------------------|------------------------------|
+| 基本流程       | 使用 [protobuf][1] 运行时库，使用反射接口，接入模板引擎 | 链接 [protobuf][1] 库的 ```libprotoc``` ，提供 ```google::protobuf::compiler::CodeGenerator``` 的实现 | 取决于接入方式   |
+| 运行效率       | 慢                                     | 快                       | 取决于接入方式               |
+| 快速迭代       | 简单，修改模板即可，可视化程度高       | 复杂，需要重新编译可执行程序。特别是对于跨平台的场景需要每个平台单独编译再测试 | 较复杂，取决于接入方式，也需要考虑跨平台场景每个平台单独编译 |
+| 模板扩展性     | 高,支持复杂的逻辑控制流，复用语言生态  | 低，仅有简单的变量替换   | 取决于接入方式，大部分静态模板引擎不支持复杂的逻辑控制流 |
+| 原生代码插入点 | 不支持，但通常不需要，可以直接改模板   | 允许使用内置插入点       | 允许使用内置插入点           |
 
 [1]: https://github.com/protocolbuffers/protobuf
