更新Rust协程接入sample的代码

--- a/source/post/2020/2004.md
+++ b/source/post/2020/2004.md
@@ -48,9 +48,11 @@ use std::future::Future;
 use std::task::{Poll, Context, Waker, RawWaker, RawWakerVTable};
 use std::pin::Pin;
 use std::boxed::Box;
+use std::vec::Vec;
+use std::mem::size_of_val;
 use std::sync::mpsc::{channel,Receiver,Sender};
 
-// ============== 用户调度层接入 ==============
+// 用户调度层接入
 struct MessageEvent {
     tx: Sender<i32>,
     waker: Waker
@@ -88,19 +90,35 @@ impl Future for Message {
     }
 }
 
-// ============== 使用者示例 ==============
-async fn call_1() {
+// 使用者示例
+async fn call_1() -> i32 {
     let msg = Message {
         rx: Option::None
     };
 
-    println!("await and got {}!", msg.await);
+    let ret = msg.await;
+    println!("await and got {}!", ret);
+    ret
 }
 
-// ============== 框架调度层接入 ==============
+async fn call_2() -> i32 {
+    println!("ready to call call_1.");
+    let res1 = call_1().await;
+    let res2 = call_1().await;
+    if res1 > res2 {
+        println!("got first call {} greater than the second {}.", res1, res2);    
+    } else {
+        println!("got first call {} less than the second {}.", res1, res2);    
+    }
+    
+    println!("call call_1 finished.");
+    res1 + res2
+}
+
+// 框架调度层接入
 struct TaskData {
     waker: Option<Waker>,
-    future: * mut Pin<Box<dyn Future<Output = ()>>>
+    future: * mut Pin<Box<dyn Future<Output = i32>>>
 }
 
 // 因为全局变量访问默认不是线程安全，不标记unsafe无法直接访问
@@ -110,7 +128,7 @@ static USER_WAKER_VTABLE: RawWakerVTable = RawWakerVTable::new(
 );
 
 struct Executor {
-    future: Option<Pin<Box<dyn Future<Output = ()>>>>
+    futures: Vec<Pin<Box<dyn Future<Output = i32>>>>
 }
 
 fn user_clone_fn(d: *const ()) -> RawWaker {
@@ -139,26 +157,30 @@ fn user_drop_fn(_: *const ()) {
 
 impl Executor {
     fn run(&mut self) {
-        if let Some(future) = self.future.as_mut() {
-            // 准备协程任务数据
-            let mut tast_data = TaskData {
-                waker: Option::None,
-                future: 0 as * mut Pin<Box<dyn Future<Output = ()>>>
-            };
-            let waker = unsafe{
-                Waker::from_raw(
-                    RawWaker::new((&mut tast_data as * mut TaskData) as *const (), &USER_WAKER_VTABLE)
-                )
-            };
-            tast_data.waker = Some(waker);
-            tast_data.future = future as * mut Pin<Box<dyn Future<Output = ()>>>;
-            tast_data.waker.unwrap().clone().wake(); // First poll
-
-            unsafe {
-                // 模拟有数据
-                if let Some(ref evt) = USER_DISPATCHER {
-                    let _ = evt.tx.send(200);
-                    evt.waker.clone().wake();
+        let mut allocator: i32 = 0;
+        loop {
+            for future in self.futures.iter_mut() {
+                // 准备协程任务数据
+                let mut task_data = TaskData {
+                    waker: Option::None,
+                    future: 0 as * mut Pin<Box<dyn Future<Output = i32>>>
+                };
+                let waker = unsafe{
+                    Waker::from_raw(
+                        RawWaker::new((&mut task_data as * mut TaskData) as *const (), &USER_WAKER_VTABLE)
+                    )
+                };
+                task_data.waker = Some(waker);
+                task_data.future = future as * mut Pin<Box<dyn Future<Output = i32>>>;
+                task_data.waker.unwrap().clone().wake(); // First poll
+    
+                unsafe {
+                    // 模拟有数据
+                    if let Some(ref evt) = USER_DISPATCHER {
+                        allocator = allocator + 1;
+                        let _ = evt.tx.send(allocator);
+                        evt.waker.clone().wake();
+                    }
                 }
             }
         }
@@ -167,9 +189,12 @@ impl Executor {
 
 fn main() {
     println!("Hello, world!");
-    let future = call_1();
+    let future1 = call_1();
+    let future2 = call_2();
+    println!("Sizeof(call_1()): {}", size_of_val(&future1));
+    println!("Sizeof(call_2()): {}", size_of_val(&future2));
     let mut exec = Executor {
-        future: Some(Box::pin(future)) /*转入到堆上分配*/
+        futures: vec![Box::pin(future1), Box::pin(future2)] /*转入到堆上分配*/
     };
     exec.run();
 }
@@ -179,7 +204,7 @@ fn main() {
 
 ![](2004-rust-future-context-waker.png)
 
-有兴趣的童鞋可以去 https://play.rust-lang.org/?version=stable&mode=debug&edition=2018&gist=ea8c97f972905513afd5e7044841e97b 这里自己看运行结果。
+有兴趣的童鞋可以去 https://play.rust-lang.org/?version=stable&mode=debug&edition=2018&gist=4f29ba9b41d09365e6e2c2032ce06dec 这里自己看运行结果。
 
 libcopp对 C++20 协程的设计抽象
 ----------------------------------------------
