--- a/source/post/2020/2004.md
+++ b/source/post/2020/2004.md
@@ -44,27 +44,28 @@ Rust的零开销抽象协程
 同时，我个人觉得 [Rust][9] 的抽象在运行时性能和无缝迁移的 **我全都要** 的设计，导致接入和理解成本太高，而且所有的调用组合最终都是一个大 Future，里面包含了很多子Future，这导致每一种调用方式都是一个全新的模板实例化，对编译器的负担太重了。我们来看个最简单的接入的例子:
 
 ```rust
-use std::future::Future;
-use std::task::{Poll, Context, Waker, RawWaker, RawWakerVTable};
-use std::pin::Pin;
 use std::boxed::Box;
-use std::vec::Vec;
+use std::collections::HashMap;
+use std::future::Future;
 use std::mem::size_of_val;
-use std::sync::mpsc::{channel,Receiver,Sender};
+use std::pin::Pin;
+use std::sync::mpsc::{channel, Receiver, Sender};
+use std::task::{Context, Poll, RawWaker, RawWakerVTable, Waker};
+use std::vec::Vec;
 
 // 用户调度层接入
 struct MessageEvent {
     tx: Sender<i32>,
-    waker: Waker
+    waker: Waker,
 }
 
 // 因为全局变量访问默认不是线程安全，不标记unsafe无法直接访问
 // Mutex不能静态构造，使用 lazy_static 模块再加Mutex可以把这里的全局变量访问转为safe的
-static mut USER_DISPATCHER: Option<MessageEvent> = Option::None;
+static mut USER_DISPATCHER: Vec<MessageEvent> = vec![];
 
 // 用于异步调用层接入
 struct Message {
-    rx: Option<Receiver<i32>>
+    rx: Option<Receiver<i32>>,
 }
 
 impl Future for Message {
@@ -80,9 +81,9 @@ impl Future for Message {
             let (tx, rx) = channel();
             unsafe {
                 self.get_unchecked_mut().rx = Some(rx);
-                USER_DISPATCHER = Some(MessageEvent{
+                USER_DISPATCHER.push(MessageEvent {
                     tx: tx,
-                    waker: ctx.waker().clone()
+                    waker: ctx.waker().clone(),
                 });
             }
             Poll::Pending
@@ -91,111 +92,206 @@ impl Future for Message {
 }
 
 // 使用者示例
-async fn call_1() -> i32 {
-    let msg = Message {
-        rx: Option::None
-    };
+async fn call_1(prefix: &str) -> i32 {
+    let msg = Message { rx: Option::None };
 
     let ret = msg.await;
-    println!("await and got {}!", ret);
+    println!("{}call_1: await and got {}!", prefix, ret);
     ret
 }
 
-async fn call_2() -> i32 {
-    println!("ready to call call_1.");
-    let res1 = call_1().await;
-    let res2 = call_1().await;
-    if res1 > res2 {
-        println!("got first call {} greater than the second {}.", res1, res2);    
-    } else {
-        println!("got first call {} less than the second {}.", res1, res2);    
-    }
-    
-    println!("call call_1 finished.");
-    res1 + res2
+async fn call_2(prefix: &str) -> i32 {
+    println!("{}call_2", prefix);
+
+    let sub_prefix = format!("{}{}", prefix, prefix);
+    let sub_fut1 = call_1(&sub_prefix);
+    let sub_fut2 = call_1(&sub_prefix);
+    println!(
+        "{}call_2 sub_fut1 {:?}:{}",
+        prefix,
+        &sub_fut1 as *const _,
+        size_of_val(&sub_fut1)
+    );
+    println!(
+        "{}call_2 sub_fut2 {:?}:{}",
+        prefix,
+        &sub_fut2 as *const _,
+        size_of_val(&sub_fut2)
+    );
+    let mut ret = sub_fut1.await;
+    ret += sub_fut2.await;
+
+    println!("{}call_2 result: {}.", prefix, ret);
+    ret
+}
+
+async fn call_3(prefix: &str) -> i32 {
+    println!("{}call_3", prefix);
+
+    let sub_prefix = format!("{}{}", prefix, prefix);
+    let sub_fut1 = call_1(&sub_prefix);
+    let sub_fut2 = call_2(&sub_prefix);
+    println!(
+        "{}call_3 sub_fut1 {:?}:{}",
+        prefix,
+        &sub_fut1 as *const _,
+        size_of_val(&sub_fut1)
+    );
+    println!(
+        "{}call_3 sub_fut2 {:?}:{}",
+        prefix,
+        &sub_fut2 as *const _,
+        size_of_val(&sub_fut2)
+    );
+    let mut ret = sub_fut1.await;
+    ret += sub_fut2.await;
+
+    println!("{}call_2 result: {}.", prefix, ret);
+    ret
 }
 
 // 框架调度层接入
 struct TaskData {
     waker: Option<Waker>,
-    future: * mut Pin<Box<dyn Future<Output = i32>>>
+    future: Pin<Box<dyn Future<Output = i32>>>,
+    owner: *mut Executor,
 }
 
 // 因为全局变量访问默认不是线程安全，不标记unsafe无法直接访问
 // Mutex不能静态构造，使用 lazy_static 模块再加Mutex可以把这里的全局变量访问转为safe的
 static USER_WAKER_VTABLE: RawWakerVTable = RawWakerVTable::new(
-    user_clone_fn, user_wake_fn, user_wake_by_ref_fn, user_drop_fn
+    user_clone_fn,
+    user_wake_fn,
+    user_wake_by_ref_fn,
+    user_drop_fn,
 );
 
 struct Executor {
-    futures: Vec<Pin<Box<dyn Future<Output = i32>>>>
+    tasks: HashMap<*const TaskData, Pin<Box<TaskData>>>,
 }
 
-fn user_clone_fn(d: *const ()) -> RawWaker {
-    println!("clone!");
-    RawWaker::new(d, &USER_WAKER_VTABLE)
-}
-
-fn user_wake_fn(task: *const ()) {
-    println!("wake!");
+fn user_wake_fn(task_raw: *const ()) {
+    println!("wake! with {:?}", &task_raw);
     // 这里透传参数是裸指针，只能unsafe了，
+    let task = task_raw as *mut TaskData;
     unsafe {
-        if let Some(ref waker) = (*(task as *mut TaskData)).waker {
+        if let Some(ref waker) = (*task).waker {
             let mut context = &mut Context::from_waker(&waker);
-            let _ = (*(*(task as *mut TaskData)).future).as_mut().poll(&mut context);
-        }
-    }
-}
-
-fn user_wake_by_ref_fn(_: *const ()) {
-    println!("wake_by_ref!");
-}
-
-fn user_drop_fn(_: *const ()) {
-    println!("drop!");
-}
-
-impl Executor {
-    fn run(&mut self) {
-        let mut allocator: i32 = 0;
-        loop {
-            for future in self.futures.iter_mut() {
-                // 准备协程任务数据
-                let mut task_data = TaskData {
-                    waker: Option::None,
-                    future: 0 as * mut Pin<Box<dyn Future<Output = i32>>>
-                };
-                let waker = unsafe{
-                    Waker::from_raw(
-                        RawWaker::new((&mut task_data as * mut TaskData) as *const (), &USER_WAKER_VTABLE)
-                    )
-                };
-                task_data.waker = Some(waker);
-                task_data.future = future as * mut Pin<Box<dyn Future<Output = i32>>>;
-                task_data.waker.unwrap().clone().wake(); // First poll
-    
-                unsafe {
-                    // 模拟有数据
-                    if let Some(ref evt) = USER_DISPATCHER {
-                        allocator = allocator + 1;
-                        let _ = evt.tx.send(allocator);
-                        evt.waker.clone().wake();
-                    }
-                }
+            if let Poll::Ready(_) = (*task).future.as_mut().poll(&mut context) {
+                (*(*task).owner).tasks.remove(&(task as *const TaskData));
             }
         }
     }
 }
 
+fn user_wake_by_ref_fn(task_raw: *const ()) {
+    println!("wake_by_ref! with {:?}", &task_raw);
+    // 这里透传参数是裸指针，只能unsafe了，
+    let task = task_raw as *mut TaskData;
+    unsafe {
+        if let Some(ref waker) = (*task).waker {
+            let mut context = &mut Context::from_waker(&waker);
+            if let Poll::Ready(_) = (*task).future.as_mut().poll(&mut context) {
+                (*(*task).owner).tasks.remove(&(task as *const TaskData));
+            }
+        }
+    }
+}
+
+fn user_create_fn(
+    owner: *mut Executor,
+    future: Pin<Box<dyn Future<Output = i32>>>,
+) -> Pin<Box<TaskData>> {
+    println!(
+        "Pined address of future {:?}",
+        (&future).as_ref().get_ref() as *const _
+    );
+    let mut task_data = Box::pin(TaskData {
+        waker: Option::None,
+        future: future,
+        owner: owner,
+    });
+
+    let task_ptr = (&mut *task_data.as_mut()) as *mut TaskData;
+    let waker;
+    unsafe {
+        waker = Waker::from_raw(RawWaker::new(task_ptr as *const (), &USER_WAKER_VTABLE));
+    }
+
+    task_data.as_mut().waker = Some(waker);
+    if let Some(current_waker) = &task_data.as_ref().waker {
+        current_waker.wake_by_ref();
+    }
+
+    task_data
+}
+
+fn user_clone_fn(task_raw: *const ()) -> RawWaker {
+    println!("clone waker with {:?}", &task_raw);
+    RawWaker::new(task_raw, &USER_WAKER_VTABLE)
+}
+
+fn user_drop_fn(task_raw: *const ()) {
+    println!("drop waker with {:?}", &task_raw);
+}
+
+impl Executor {
+    fn run(&mut self) {
+        let mut allocator: i32 = 1;
+
+        loop {
+            let mut has_success = false;
+            unsafe {
+                // 模拟有数据
+                if let Some(evt) = USER_DISPATCHER.pop() {
+                    if let Ok(_) = evt.tx.send(allocator) {
+                        allocator = allocator + 1;
+                        has_success = true;
+                        evt.waker.wake_by_ref();
+                    }
+                }
+            }
+
+            if !has_success {
+                break;
+            }
+        }
+    }
+
+    fn spawn(&mut self, future: Pin<Box<dyn Future<Output = i32>>>) {
+        let task = user_create_fn(self, future);
+        self.tasks.insert(&*task.as_ref(), task);
+    }
+}
+
 fn main() {
     println!("Hello, world!");
-    let future1 = call_1();
-    let future2 = call_2();
-    println!("Sizeof(call_1()): {}", size_of_val(&future1));
-    println!("Sizeof(call_2()): {}", size_of_val(&future2));
+    let future1 = call_1("-");
+    let future2 = call_2("+");
+    let future3 = call_3("#");
+    println!(
+        "Sizeof(call_1()): {:?}:{}",
+        &future1 as *const _,
+        size_of_val(&future1)
+    );
+    println!(
+        "Sizeof(call_2()): {:?}:{}",
+        &future2 as *const _,
+        size_of_val(&future2)
+    );
+    println!(
+        "Sizeof(call_3()): {:?}:{}",
+        &future3 as *const _,
+        size_of_val(&future3)
+    );
     let mut exec = Executor {
-        futures: vec![Box::pin(future1), Box::pin(future2)] /*转入到堆上分配*/
+        tasks: HashMap::new(),
     };
+
+    // Move 到堆上并且 pin（不允许再move）
+    exec.spawn(Box::pin(future1));
+    exec.spawn(Box::pin(future2));
+    exec.spawn(Box::pin(future3));
     exec.run();
 }
 ```
@@ -204,7 +300,7 @@ fn main() {
 
 ![](2004-rust-future-context-waker.png)
 
-有兴趣的童鞋可以去 https://play.rust-lang.org/?version=stable&mode=debug&edition=2018&gist=4f29ba9b41d09365e6e2c2032ce06dec 这里自己看运行结果。
+上面的代码打印了比较多的日志，也是为了方便查看Future之间的结构关系。有兴趣的童鞋可以去 https://play.rust-lang.org/?version=stable&mode=debug&edition=2018&gist=2e28a6da5d6646fd93a023b5ea97d774 这里自己看运行结果。
 
 libcopp对 C++20 协程的设计抽象
 ----------------------------------------------
