--- a/source/post/2020/2004.md
+++ b/source/post/2020/2004.md
@@ -622,14 +622,14 @@ int main() {
 | [librf][8](C++20 Coroutine) - Clang  | 310 ns / 292 ns    |  252 ns / 245 ns      |   29 ns / 29 ns       | 281 ns / 229ns         |   33 ns / 31 ns        |
 | [libcopp+动态栈池][1]                | 32 ns              |   96 ns               |   77 ns               | 212 ns                 |  213 ns                |
 | [libcopp+libcotask+动态栈池][1]      | 49 ns              |  134 ns               |  134 ns               | 256 ns                 |  371 ns                |
-| libcopp future_t - GCC               | 4 ns  / 4 ns       |  26 ns / 25 ns        |   4 ns / 4 ns         | 30 ns / 30 ns          |   9 ns / 5 ns          |
 | libcopp future_t(no trivial) - GCC   | 4 ns  / 4 ns       |  26 ns / 24 ns        |   4 ns / 4 ns         | 26 ns / 31 ns          |   6 ns / 5 ns          |
-| libcopp task_t - GCC                 | 21 ns / 23 ns      |  120 ns / 118 ns      |   25 ns / 25 ns       | 122 ns / 131 ns        |   35 ns / 33 ns        |
-| libcopp task_t(no trivial) - GCC     | 41 ns / 32 ns      |  112 ns / 120 ns      |   41 ns / 32 ns       | 122 ns / 131 ns        |   50 ns / 38 ns        |
-| libcopp future_t - Clang             | 5 ns / 5 ns        |  30 ns / 30 ns        |   5 ns / 5 ns         | 30 ns / 35 ns          |   7 ns / 6 ns          |
-| libcopp future_t(no trivial) - Clang | 7 ns / 7 ns        |  30 ns / 30 ns        |   7 ns / 7 ns         | 30 ns / 37 ns          |   8 ns / 8 ns          |
-| libcopp task_t - Clang               | 24 ns / 24 ns      |  237 ns / 142 ns      |   24 ns / 24 ns       | 357 ns / 156 ns        |   44 ns / 33 ns        |
-| libcopp task_t(no trivial) - Clang   | 53 ns / 44 ns      |  257 ns / 155 ns      |   53 ns / 45 ns       | 357 ns / 175 ns        |   70 ns / 61 ns        |
+| libcopp future_t - GCC               | 4 ns  / 4 ns       |  26 ns / 25 ns        |   4 ns / 4 ns         | 30 ns / 30 ns          |   9 ns / 5 ns          |
+| libcopp task_t(no trivial) - GCC     | 21 ns / 23 ns      |  120 ns / 118 ns      |   25 ns / 25 ns       | 122 ns / 131 ns        |   35 ns / 33 ns        |
+| libcopp task_t - GCC                 | 41 ns / 32 ns      |  112 ns / 120 ns      |   41 ns / 32 ns       | 122 ns / 131 ns        |   50 ns / 38 ns        |
+| libcopp future_t(no trivial) - Clang | 5 ns / 5 ns        |  30 ns / 30 ns        |   5 ns / 5 ns         | 30 ns / 35 ns          |   7 ns / 6 ns          |
+| libcopp future_t - Clang             | 7 ns / 7 ns        |  30 ns / 30 ns        |   7 ns / 7 ns         | 30 ns / 37 ns          |   8 ns / 8 ns          |
+| libcopp task_t(no trivial) - Clang   | 24 ns / 24 ns      |  237 ns / 142 ns      |   24 ns / 24 ns       | 357 ns / 156 ns        |   44 ns / 33 ns        |
+| libcopp task_t - Clang               | 53 ns / 44 ns      |  257 ns / 155 ns      |   53 ns / 45 ns       | 357 ns / 175 ns        |   70 ns / 61 ns        |
 
 上面 [librf][8] 是另一个使用[C++20协程][11]的封装库，仅用它自带的工具，用一样的编译选线给出压力测试结果对比，据作者说单协程切换慢是由于内部的定时器接口开销比较高。上面还提供了使用 [libcopp][1] 传统有栈协程的开销对比。和其他一些常用协程库比如 [libco][15] 、 [libgo][14] 、 goroutine 等的对比可以见我之前一篇分享: [《C++20 Coroutine 性能测试 (附带和libcopp/libco/libgo/goroutine/linux ucontext对比)》][13]
 
@@ -742,6 +742,11 @@ int main() {
       "data": [53, 53, 70],
       "type": 'line'
     }, {
+      "label": "C++20 Coroutine - GCC 创建耗时",
+      "backgroundColor": "rgba(128, 0, 0, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 120, 122]
+    }, {
       "label": "C++20 Coroutine - Clang 创建耗时",
       "backgroundColor": "rgba(255, 0, 0, 1)",
       "yAxisID": 'y-axis-1',
@@ -777,12 +782,12 @@ int main() {
       "yAxisID": 'y-axis-1',
       "data": [null, 26, 26]
     }, {
-      "label": "libcopp task_t - GCC 创建耗时",
+      "label": "libcopp task_t(no trivial) - GCC 创建耗时",
       "backgroundColor": "rgba(255, 165, 0, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 120, 122]
     }, {
-      "label": "libcopp task_t(no trivial) - GCC 创建耗时",
+      "label": "libcopp task_t - GCC 创建耗时",
       "backgroundColor": "rgba(218, 112, 214, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 112, 122]
@@ -797,12 +802,12 @@ int main() {
       "yAxisID": 'y-axis-1',
       "data": [null, 30, 30]
     }, {
-      "label": "libcopp task_t - Clang 创建耗时",
+      "label": "libcopp task_t(no trivial) - Clang 创建耗时",
       "backgroundColor": "rgba(106, 90, 205, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 237, 357]
     }, {
-      "label": "libcopp task_t(no trivial) - Clang 创建耗时",
+      "label": "libcopp task_t - Clang 创建耗时",
       "backgroundColor": "rgba(112, 128, 144, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 257, 357]
@@ -915,14 +920,14 @@ int main() {
       "data": [4, 4, 5],
       "type": 'line'
     }, {
-      "label": "libcopp task_t - GCC 切换耗时",
+      "label": "libcopp task_t(no trivial) - GCC 切换耗时",
       "borderColor": "rgba(255, 140, 0, 1)",
       "fill": false,
       "yAxisID": 'y-axis-2',
       "data": [23, 25, 33],
       "type": 'line'
     }, {
-      "label": "libcopp task_t(no trivial) - GCC 切换耗时",
+      "label": "libcopp task_t - GCC 切换耗时",
       "borderColor": "rgba(153, 50, 204, 1)",
       "fill": false,
       "yAxisID": 'y-axis-2',
@@ -943,19 +948,24 @@ int main() {
       "data": [7, 7, 8],
       "type": 'line'
     }, {
-      "label": "libcopp task_t - Clang 切换耗时",
+      "label": "libcopp task_t(no trivial) - Clang 切换耗时",
       "borderColor": "rgba(255, 20, 147, 1)",
       "fill": false,
       "yAxisID": 'y-axis-2',
       "data": [24, 24, 33],
       "type": 'line'
     }, {
-      "label": "libcopp task_t(no trivial) - Clang 切换耗时",
+      "label": "libcopp task_t - Clang 切换耗时",
       "borderColor": "rgba(72, 61, 139, 1)",
       "fill": false,
       "yAxisID": 'y-axis-2',
       "data": [44, 45, 61],
       "type": 'line'
+    }, {
+      "label": "C++20 Coroutine - GCC 创建耗时",
+      "backgroundColor": "rgba(128, 0, 0, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 118, 131]
     }, {
       "label": "C++20 Coroutine - Clang 创建耗时",
       "backgroundColor": "rgba(255, 0, 0, 1)",
@@ -992,12 +1002,12 @@ int main() {
       "yAxisID": 'y-axis-1',
       "data": [null, 24, 31]
     }, {
-      "label": "libcopp task_t - GCC 创建耗时",
+      "label": "libcopp task_t(no trivial) - GCC 创建耗时",
       "backgroundColor": "rgba(255, 165, 0, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 118, 131]
     }, {
-      "label": "libcopp task_t(no trivial) - GCC 创建耗时",
+      "label": "libcopp task_t - GCC 创建耗时",
       "backgroundColor": "rgba(218, 112, 214, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 120, 131]
@@ -1012,12 +1022,12 @@ int main() {
       "yAxisID": 'y-axis-1',
       "data": [null, 30, 37]
     }, {
-      "label": "libcopp task_t - Clang 创建耗时",
+      "label": "libcopp task_t(no trivial) - Clang 创建耗时",
       "backgroundColor": "rgba(106, 90, 205, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 142, 156]
     }, {
-      "label": "libcopp task_t(no trivial) - Clang 创建耗时",
+      "label": "libcopp task_t - Clang 创建耗时",
       "backgroundColor": "rgba(112, 128, 144, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 155, 175]
